app-cache/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springkube-cache-app-service
  namespace: springkube
spec:
  selector:
    app: springkube-cache-app
  ports:
    - protocol: TCP
      port: 8080
