app-cache/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springkube-ingress
  namespace: springkube
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          #          - pathType: Prefix
          #            path: /cache
          - pathType: ImplementationSpecific
            path: /cache(/|$)(.*)
            backend:
              service:
                name: springkube-cache-app-service
                port:
                  number: 8080
